Residual warnings in sun/nio/** and java/io native code (win64)

XMLWordPrintable

    • b130
    • generic
    • generic
    • Not verified

      ../../../src/windows/native/sun/nio/ch/Iocp.c(106) : warning C4133: 'function' : incompatible types - from 'ULONG *' to 'PULONG_PTR'
      ../../../src/windows/native/sun/nio/fs/WindowsNativeDispatcher.c(1249) : warning C4133: 'function' : incompatible types - from 'ULONG *' to 'PULONG_PTR'

      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(223) : warning C4267: 'initializing' : conversion from 'size_t' to 'int', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(229) : warning C4267: 'function' : conversion from 'size_t' to 'jsize', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(235) : warning C4267: 'function' : conversion from 'size_t' to 'jsize', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(254) : warning C4267: 'initializing' : conversion from 'size_t' to 'int', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(261) : warning C4267: 'function' : conversion from 'size_t' to 'jsize', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(269) : warning C4267: 'function' : conversion from 'size_t' to 'jsize', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(361) : warning C4267: '=' : conversion from 'size_t' to 'jint', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(628) : warning C4267: '=' : conversion from 'size_t' to 'int', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(671) : warning C4267: 'function' : conversion from 'size_t' to 'jsize', possible loss of data
      ../../../src/windows/native/java/io/WinNTFileSystem_md.c(822) : warning C4267: 'function' : conversion from 'size_t' to 'jsize', possible loss of data
      canonicalize_md.c
      ../../../src/windows/native/java/io/canonicalize_md.c(482) : warning C4267: '=' : conversion from 'size_t' to 'int', possible loss of data
      ../../../src/windows/native/java/io/canonicalize_md.c(541) : warning C4267: '=' : conversion from 'size_t' to 'int', possible loss of data

            Assignee:
            Alan Bateman
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: