7017454: Residual warnings in sun/nio/** and java/io native code (win64)

Reviewed-by: chegar